bindings: Implement ToV8 for IDL callback function

To support more types in ToV8().
This will be needed in defining IDL callback functions
in IDL dictoinaries.


Bug: 867875
Change-Id: Id905ed1143899a3b455b5aca24e376e5ac50739c
Reviewed-on: https://chromium-review.googlesource.com/1166618
Commit-Queue: Hitoshi Yoshida <peria@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Yuki Shiino <yukishiino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581496}
Former-commit-id: 154e570c696872ae0a56f41eb7e92dfe092f0ac0